@@ -27,6 +27,7 @@ import java.io.BufferedInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 
 public class playmp3url {
@@ -42,7 +43,9 @@ public class playmp3url {
     public static void playFromURL(String url1)  {
         try {
             stop();
-            URL url = new URL(url1);
+//            URL url = new URL(url1);
+            URI uri = new URI(url1);
+            URL url = uri.toURL();
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
 
             // 设置请求属性
